--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.4",
     "oh-vue-icons": "^1.0.0-rc3",
     "register-service-worker": "^1.7.2",
+    "tailwindcss-animated": "^1.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
