--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.8.3",
     "firebase": "^10.12.4",
     "oh-vue-icons": "^1.0.0-rc3",
+    "pinia": "^2.2.0",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "register-service-worker": "^1.7.2",
     "tailwindcss-animated": "^1.1.2",
     "vue": "^3.2.13",
